fix(calendar): add gap between the picker dates

--- a/src/components/calendar/themes/calendar.base.scss
+++ b/src/components/calendar/themes/calendar.base.scss
@@ -117,6 +117,12 @@
     }
 }
 
+[part~='picker-dates'] {
+    display: flex;
+    align-items: center;
+    gap: rem(4px);
+}
+
 [part='days-view-container'] {
     flex-grow: 1;
 }
